--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  height: 100dvh;
+  height: 100vh;
   background-color: rgb(8, 83, 83);
   display: grid;
   place-items: center;
